# pbrt-r3

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: perf-optimization-notes-room-path.md
src/: lib.rs
src/accelerators/: create_accelerator.rs  mod.rs
src/accelerators/bvh/: create_bvh_accelerator.rs  mod.rs
src/accelerators/exhaustive/: accel.rs  exhaustive.rs  mod.rs
src/accelerators/kdtree/: accel.rs  kdtree.rs  mod.rs
src/accelerators___/: mod.rs
src/accelerators___/bvh/: mod.rs
src/accelerators___/kdtree/: mod.rs
src/cameras/: create_camera.rs  environment.rs  mod.rs  orthographic.rs  perspective.rs  realistic.rs
src/core/: material.rs  mod.rs  quaternion.rs  rng.rs
src/core/api/: debug_context.rs  mod.rs  multiple_context.rs  parse_context.rs  ply_context.rs  print_context.rs  to_ply_context.rs
src/core/base/: constants.rs  functions.rs  types.rs
src/core/camera/: base_camera.rs  camera.rs  mod.rs  projective.rs
src/core/display/: display.rs  mod.rs  multiple_display.rs
src/core/distribution/: beckmann.rs  microfacet.rs  mod.rs  trowbridge_reitz.rs
src/core/efloat/: efloat.rs  mod.rs
src/displays/: mod.rs
src/filters/: box_filter.rs  create_filter.rs  gaussian.rs  mitchell.rs  mod.rs  sinc.rs  triangle.rs
src/integrators/: ao.rs  aov.rs  bdpt.rs  create_integrator.rs  directlighting.rs  mlt.rs  mod.rs  path.rs  sppm.rs  volpath.rs  whitted.rs
src/lights/: create_light.rs  diffuse.rs  distant.rs  goniometric.rs  infinite.rs  mod.rs  point.rs  projection.rs  spot.rs
src/materials/: create_material.rs  disney.rs  fourier.rs  glass.rs  hair.rs  kdsubsurface.rs  matte.rs  metal.rs  mirror.rs  mix.rs  mod.rs  plastic.rs  substrate.rs  subsurface.rs  translucent.rs  uber.rs
src/media/: create_medium.rs  grid.rs  homogeneous.rs  mod.rs
src/samplers/: create_sampler.rs  halton.rs  maxmin.rs  mod.rs  random.rs  sobol.rs  stratified.rs  zerotwosequence.rs
src/shapes/: alphamask.rs  cone.rs  create_shape.rs  curve.rs  cylinder.rs  disk.rs  heightfield.rs  hyperboloid.rs  loopsubdiv.rs  mod.rs  nurbs.rs  paraboloid.rs  plymesh.rs  sphere.rs  triangle.rs  triangleのコピー.rs
src/textures/: bilerp.rs  checkerboard.rs  constant.rs  create_texture.rs  dots.rs  fbm.rs  imagemap.rs  marble.rs  mix.rs  mod.rs  normal.rs  scale.rs  uv.rs  windy.rs  wrinkled.rs
src/tools/: cyhair2pbrt.rs
tests/: animated_transform.rs  bitops.rs  bounds.rs  bsdfs.rs  find_interval.rs  fourierbsdf.rs  hair.rs  hg.rs  sampling.rs  shapes.rs  spectrum.rs
(+228 files in other folders)
