[package]
name = "pbrt-r3"
version = "3.0.2"
edition = "2021"
build = "build/main.rs"
default-run = "pbrt-r3"

[features]
default = []
profile = []
stats = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive", "env"] }
env_logger = "0.10.1"
image = "0.24.5"
indicatif = "0.17.3"
log = "0.4.20"
nom = "7.1.1"
ply-rs = "0.1.3"
rayon = "1.7.0"
rust-crypto = "0.2.36"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"

#[profile.release]
#lto = true
#strip = true

[lints.clippy]
needless_return = "allow"
arc_with_non_send_sync = "allow"
excessive_precision = "allow"
needless_range_loop = "allow"
too_many_arguments = "allow"
redundant_field_names = "allow"
identity_op = "allow"
erasing_op = "allow"
bool_assert_comparison = "allow"

[[bin]]
name = "pbrt-r3"
path = "src/bin/pbrt.rs"

[[bin]]
name = "cyhair2pbrt"
path = "src/tools/cyhair2pbrt.rs"

